Fix node blurring for network hover
Fixes edge focus/blurring when selecting networks

Configurable arc size

net-view variant: Smaller arc (just the top)

net-view revision: Add white container around arcs.

To join them together in a sense. Trying to avoid the edge/arc position
association. Not sure if this really helps

net-view variations: shadows.

bg fill, align network rotation w/ rank.

Cute little dots

Stacked lines

Rounded rects

Slightly thicker "pills" to repr networks

Handle edge case by making line longer

Fix network bar offset

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -341,9 +341,9 @@ h2 {
     transition: opacity .5s @base-ease;
     text-align: center;
 
-    .node-networks-overlay {
-      fill: none;
-      stroke: @background-darker-secondary-color;
+    .node-network {
+      // stroke: @background-lighter-color;
+      // stroke-width: 4px;
     }
 
     .node-label,
